fixing Navbar name on mobile version

--- a/global.css
+++ b/global.css
@@ -185,7 +185,7 @@ button:focus {
         display: none;
     }
     .nav_bar_left {
-        width: 50%;
+        width: 70%;
     }
     .nav_bar_center {
         display: none;
