--- a/index/index.css
+++ b/index/index.css
@@ -14,7 +14,7 @@
     width: 1000px;
     max-width: 90%;
     text-align: center;
-    flex-shrink: 0
+
 }
 
 .personal_image {
